--- a/src/app/avaliation/dobras/jp3/jp3.component.html
+++ b/src/app/avaliation/dobras/jp3/jp3.component.html
@@ -34,11 +34,11 @@
                         </td>
                     </tr>
                     <tr *ngIf="student.sexo == 'F'">
-                        <th><span>Triceps</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triceps}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].triceps}}</td>
+                        <th><span>Triciptal</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                         <td *ngIf="addEval">
-                            <input name="triceps" #triceps="ngModel" [(ngModel)]="newEvaluation.triceps" type="number"
+                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number"
                                 step="0.1">
                         </td>
                     </tr>
@@ -71,29 +71,35 @@
                     </tr>
                     <tr>
                         <th>Media</th>
-                        <td *ngIf="pointer>=1">
+                        <td *ngIf="pointer>=1 && student.sexo=='M'">
                             {{(+evaluation[pointer-1].peitoral + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural) / 3 | number : '1.2-2'}}
                         </td>
-                        <td *ngIf="pointer>=0">
+                        <td *ngIf="pointer>=0 && student.sexo=='M'">
                             {{(+evaluation[pointer].peitoral + +evaluation[pointer].abdominal + +evaluation[pointer].crural) / 3 | number : '1.2-2'}}
                         </td>
-                        <td *ngIf="addEval">
-                            <!--                         <input name="c_xmedia" #c_xmedia="ngModel" [(ngModel)]="newEvaluation.c_xmedia"
-                            type="number" step="0.1"> -->
+                        <td *ngIf="pointer>=1 && student.sexo=='F'">
+                            {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].crural) / 3 | number : '1.2-2'}}
                         </td>
+                        <td *ngIf="pointer>=0 && student.sexo=='F'">
+                            {{(+evaluation[pointer].triciptal + +evaluation[pointer].suprailiaca + +evaluation[pointer].crural) / 3 | number : '1.2-2'}}
+                        </td>
+                        <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th>Somatório</th>
-                        <td *ngIf="pointer>=1">
-                            {{+evaluation[pointer-1].peitoral + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural}}
+                        <td *ngIf="pointer>=1 && student.sexo=='M'">
+                            {{+evaluation[pointer-1].peitoral + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural | number : '1.2-2'}}
                         </td>
-                        <td *ngIf="pointer>=0">
-                            {{+evaluation[pointer].peitoral + +evaluation[pointer].abdominal + +evaluation[pointer].crural }}
+                        <td *ngIf="pointer>=0 && student.sexo=='M'">
+                            {{+evaluation[pointer].peitoral + +evaluation[pointer].abdominal + +evaluation[pointer].crural | number : '1.2-2'}}
                         </td>
-                        <td *ngIf="addEval">
-                            <!--                          <input name="c_xtot" #c_xtot="ngModel" [(ngModel)]="newEvaluation.c_xtot"
-                             type="number" step="0.1"> -->
+                        <td *ngIf="pointer>=1 && student.sexo=='F'">
+                            {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].crural | number : '1.2-2'}}
                         </td>
+                        <td *ngIf="pointer>=0 && student.sexo=='F'">
+                            {{+evaluation[pointer].triciptal + +evaluation[pointer].suprailiaca + +evaluation[pointer].crural | number : '1.2-2'}}
+                        </td>
+                        <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                 </tbody>
             </table>
