--- a/src/app/avaliation/componente-postural/componente-postural.component.html
+++ b/src/app/avaliation/componente-postural/componente-postural.component.html
@@ -1,4 +1,4 @@
-<div class="container" (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
+<div class="container">
     <div class="header">
         <h1 i18n>Avaliação Postural</h1>
     </div>
@@ -9,7 +9,7 @@
             <!-- TAB - Vista anterior -->
             <mat-tab i18n label="Vista Anterior">
                 <form #fa="ngForm" (submit)="saveDataForm(fa)">
-                    <table>
+                    <table id="VP" (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
@@ -171,7 +171,7 @@
             <!-- Vista Lateral -->
             <mat-tab i18n label="Vista Lateral">
                 <form #fl="ngForm" (submit)="saveDataForm(fl)">
-                    <table>
+                    <table id="VL" (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
@@ -382,7 +382,7 @@
             <!-- Vista Posterior -->
             <mat-tab i18n label="Vista Posterior">
                 <form #fp="ngForm" (submit)="saveDataForm(fp)">
-                    <table>
+                    <table (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
@@ -561,9 +561,9 @@
                 </form>
             </mat-tab>
             <!--   FOTOS -->
-            <mat-tab i18n label="Fotos">
+            <mat-tab i18n label="Fotos"  (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
 
-                <table>
+                <table >
                     <thead>
                         <tr>
                             <th class="th-top" *ngIf="pointer>=0">
