--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -12,6 +12,9 @@
   justify-content: flex-start;
   align-items: center;
   color: white;
+  &-content{
+    width: 100%;
+  }
 
   .h1-title {
     width: 100%;
@@ -123,7 +126,10 @@ table {
 
 
 @media only screen and (min-width: 768px) {
-  .mat-tab-group {
+  .section-content{
     width: 520px !important;
   }
+/*   .mat-tab-group {
+    
+  } */
 }
